20130516 doc/libspectrum.3: update version number and date for 1.1 release.
20130516 ChangeLog: update date in main changelog.
20130517 README: update one more date for the 1.1 release.
20130518 doc/libspectrum.txt: update version number for 1.1 release (Sergio).
20130524 Makefile.am: update libtool age to support binaries built against
         libspectrum 1.0.0 (Stuart).
20130526 Makefile.am: add dll.c into the dist tarball (Sergio).
20130928 configure.ac: use 'subdir-objects' option as advised by automake 1.14
         to place object files in subdirectories (Sergio).
20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
         (Sergio).
20131215 rzx.c: fix snapshot insertion in rzx recordings (Sergio).
20140113 libspectrum.h.in,rzx.c: allow to finalise rzx recordings (part of bug
         #305) (Sergio).
20140210 rzx.c: use SZX format for interspersed snapshots in RZX recordings
         (part of bug #304) (Sergio).
20140504 tape.c: ensure that we have an edge at the end of a tape to ensure that
         the last pulse is terminated - fixes loading of Moon Cresta (thanks,
         Lee Tonks) (Fred).
20141230 szx.c: guard against passing a NULL pointer to memcpy in
         write_if1_chunk() (thanks, clang static analyser) (Fred).
20141230 autogen.sh: select glibtoolize where required (Sergio via fuse).
20150107 rzx.c: rewrite some conditions for RZX finalisation in a more logical
         way (thanks, clang static analyser) (Sergio).
20150107 test/test.c: remove "Function call argument is an uninitialized value"
         warning. There's no chance that it is, but clang doesn't realise that
         (Sergio).
20150225 pzx_read.c,szx.c,tzx_read.c,warajevo_read.c: avoid (undefined) reliance
         on pointer overflow in buffer length checks (Stuart).
20150302 internals.h,pzx_read.c,szx.c,test/test.c,zxs.c: add and use ARRAY_SIZE
         macro (Stuart).
20150302 libspectrum.h.in: add libspectrum_{new,new0,renew}() macros (Stuart).